# myrepo

./: Images  Makefile  My test.md  README  README.md  Welcome file.md  basewindow.cpp  basewindow.h  build_boot_image.sh  build_boot_image_32.sh  build_boot_image_64.sh  build_kernel_image.sh  build_kernel_image_32.sh  build_kernel_image_64.sh  candidate.cpp  candidate.h  common.h  configure_gsl  fcws.cpp  fcws.h  gen_param.cpp  localfeature.cpp  localfeature.h  localmodel.cpp  localmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  models2.pb-c.cpp  models2.pb-c.h  models2.pb.h  param.cpp  param.h  pca.cpp  pca.h  pca_ica.files  pca_ica.includes  selector.cpp  selector.h  t1  (+9 more)
FW/apps/: CMakeLists.txt  devel_rpi4_toolchain.cmake  devel_rpi4_toolchain_32.cmake
FW/apps/common/: common.h  component.c  component.h
FW/apps/v4l2_mmal-master/: CMakeLists.txt  v4l2_mmal.c
FW/apps/vce/: CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  Encoder.cpp  Encoder.h  PiCam.cpp  PiCam.h  PiCamCli.cpp  PiCamCtrl.cpp  PiCamHelpers.cpp  V4l2Cam.cpp  V4l2Cam.h  VceCtrl.cpp  VceCtrl.h  vce.cpp
FW/apps/vdisp/: CMakeLists.txt
FW/modules/: .gitignore  CMakeLists.txt  devel_rpi4_toolchain.cmake  devel_rpi4_toolchain_32.cmake
FW/modules/MsgBroker/: CMakeLists.txt  msg_broker.c  msg_broker.h
FW/modules/dlib/: CMakeLists.txt
FW/modules/iniparser/: CMakeLists.txt
FW/modules/ssm/: CMakeLists.txt  ssm.c  ssm.h
FW/modules/vc/: Doxygen  README.md
FW/modules/vc/doxygen/html/: annotated.html  classes.html  dir_000000_000116.html  dir_000001_000004.html  dir_000002_000004.html  dir_000003_000004.html  dir_000004_000079.html  dir_000005_000004.html  dir_000006_000004.html  dir_000007_000004.html  dir_000008_000004.html  dir_000008_000016.html  dir_000009_000004.html  dir_000010_000004.html  dir_000011_000004.html  dir_000012_000004.html  dir_000013_000004.html  dir_000014_000004.html  dir_000015_000004.html  dir_000016_000004.html  dir_000017_000004.html  dir_000018_000004.html  dir_000019_000004.html  dir_000020_000004.html  dir_000021_000004.html  dir_000022_000004.html  dir_000023_000004.html  dir_000024_000004.html  dir_000025_000004.html  dir_000025_000016.html  dir_000026_000004.html  dir_000027_000079.html  dir_000027_000116.html  dir_000027_000120.html  dir_000027_000121.html  dir_000027_000142.html  dir_000027_000145.html  dir_000028_000142.html  dir_000029_000079.html  dir_000030_000079.html  (+3020 more)
FW/modules/vc/doxygen/html/d0/d00/: mmal__list_8h__dep__incl.map  mmal__list_8h__dep__incl.md5
FW/modules/vc/doxygen/html/d0/d01/: structVG__CLIENT__STATE__T-members.html
FW/modules/vc/doxygen/html/d0/d02/: structDISPMANX__UPDATE__SUBMIT__PARAM__T-members.html  structMMAL__PARAMETER__CAMERA__USE__CASE__T-members.html
FW/modules/vc/doxygen/html/d0/d03/: structOMX__CONFIG__BRCMAUDIODESTINATIONTYPE.html
FW/modules/vc/doxygen/html/d0/d04/: structWFC__IPC__MSG__SS__SIGNAL__IMAGE__T.html
FW/modules/vc/doxygen/html/d0/d06/: structWFC__IPC__MSG__SS__ON__IMAGE__AVAILABLE__T.html
FW/modules/vc/doxygen/html/d0/d08/: containers__index_8h__incl.map  containers__index_8h__incl.md5
FW/modules/vc/doxygen/html/d0/d09/: structIL__ADD__BUFFER__RESPONSE__T__coll__graph.map  structIL__ADD__BUFFER__RESPONSE__T__coll__graph.md5
FW/modules/vc/doxygen/html/d0/d0a/: structvc__container__bits__tag.html
FW/modules/vc/doxygen/html/d0/d0b/: khrn__client__platform__filler__abstract_8h__incl.map  khrn__client__platform__filler__abstract_8h__incl.md5  structMMAL__PARAMETER__FLASH__T.html
FW/modules/vc/doxygen/html/d0/d0c/: containers__io__helpers_8h__dep__incl.map  containers__io__helpers_8h__dep__incl.md5  hello__teapot_2triangle_8c.html  hello__teapot_2triangle_8c_source.html
FW/modules/vc/doxygen/html/d0/d0d/: containers__uri_8c.html  containers__uri_8c_source.html  gl__oes__framebuffer__object_8c.html  gl__oes__framebuffer__object_8c_source.html  structVC__CONTAINER__IO__PRIVATE__T.html  vcos__mempool_8h__incl.map  vcos__mempool_8h__incl.md5
FW/modules/vc/doxygen/html/d0/d0e/: structDISPMANX__GET__MODE__INFO__PARAM__T-members.html
FW/modules/vc/doxygen/html/d0/d0f/: structgst__t.html
FW/modules/vc/doxygen/html/d0/d10/: structOMX__CONFIG__BACKLIGHTTYPE__coll__graph.map  structOMX__CONFIG__BACKLIGHTTYPE__coll__graph.md5
FW/modules/vc/doxygen/html/d0/d11/: khrn__image_8h__incl.map  khrn__image_8h__incl.md5
FW/modules/vc/doxygen/html/d0/d12/: containers__logging_8c.html  containers__logging_8c_source.html  mmal__util_8h.html  mmal__util_8h_source.html  structWFC__CLIENT__STATE__T__coll__graph.map  structWFC__CLIENT__STATE__T__coll__graph.md5
FW/modules/vc/doxygen/html/d0/d14/: hello__pi_2hello__teapot_2models_8c.html  hello__pi_2hello__teapot_2models_8c_source.html  structDISPMAN__CREATE__EFFECTS__INSTANCE__RESPONSE__T.html  structMMAL__PARAMETER__CAMERA__ANNOTATE__V3__T.html
FW/modules/vc/doxygen/html/d0/d15/: structMMALPLAY__COMPONENT__T-members.html
FW/modules/vc/doxygen/html/d0/d1a/: structOMX__AUDIO__PARAM__PDCEFRTYPE-members.html  structsubframe__t-members.html
FW/modules/vc/doxygen/html/d0/d1b/: structOMX__CONFIG__BRCMAUDIOTRACKGAPLESSPLAYBACKTYPE-members.html
FW/modules/vc/doxygen/html/d0/d1c/: structDISPMAN__SET__EFFECT__PARAM__T-members.html  structMMAL__RECT__T-members.html  (+1 more)
FW/modules/vc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+199 more)
FW/modules/vc/host_applications/linux/: CMakeLists.txt
FW/modules/vc/interface/mmal/core/: mmal_component.c  mmal_logging.c  mmal_port.c
FW/modules/vc/interface/mmal/vc/: mmal_vc_api.c
FW/modules/vc/makefiles/cmake/: vmcs.cmake
FW/modules/vc/makefiles/cmake/toolchains/: aarch64-linux-gnu.cmake
(+8624 files in other folders)
