CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(PRI4_MODULE)

SET(CMAKE_MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
SET(MODULES_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/install_temp_modules)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libs)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(mmal)
