CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(PRI4_MODULE)

SET(CMAKE_MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
IF(CMAKE_CROSSCOMPILING)
    SET(HOST_CONFIG --host=aarch64-linux)
    SET(ADDITIONAL_ENV_CONFIG CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} LD=${CMAKE_LINKER} NM=${CMAKE_NM} AR=${CMAKE_AR} RANLIB=${CMAKE_RANLIB} STRIP=${CMAKE_STRIP} OBJDUMP=${CMAKE_OBJDUMP} PKG_CONFIG=${MY_TOOLCHAIN_PATH}/pkg-config)
ENDIF(CMAKE_CROSSCOMPILING)

SET(MODULES_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/install_temp_modules)
SET(VC_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/vc)
#SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libs)
#SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(vc)
ADD_SUBDIRECTORY(MsgBroker)
ADD_SUBDIRECTORY(dlib)
ADD_SUBDIRECTORY(iniparser)
ADD_SUBDIRECTORY(ssm)
