
SET(SRC_LIST vce.cpp)

LIST(APPEND LINK_LIST msgbroker 
                      iniparser)

IF(LIB_TYPE STREQUAL "StaticLib")
    LIST(APPEND LINK_LIST ${VML_LIB_LIST})
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${VTCS_APP_DIR}/tinyvenc_common ${VTCS_APP_DIR}/common ${VTCS_SW_DEV_ROOT}/include)

SET(TARGET_NAME tinyvenc)
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LINK_LIST})
