###### Library ######
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${MODULES_OUTPUT_PATH}/include ${VC_ROOT_PATH})
LINK_DIRECTORIES(${MODULES_OUTPUT_PATH}/lib)

SET(LIB_SRC_LIST ssm.c)

IF(DEBUG_ENABLE)
	ADD_DEFINITIONS(-DDEBUG)
ELSE(DEBUG_ENABLE)
	ADD_DEFINITIONS(-DNDEBUG)
ENDIF(DEBUG_ENABLE)

SET(LIB_TARGET_NAME ssm)

IF(LIB_TYPE STREQUAL "ShareLib")
    ADD_LIBRARY(${LIB_TARGET_NAME} SHARED ${LIB_SRC_LIST})
ELSE(LIB_TYPE STREQUAL "StaticLib")
    ADD_LIBRARY(${LIB_TARGET_NAME} STATIC ${LIB_SRC_LIST})
ENDIF()

TARGET_LINK_LIBRARIES(ssm vcos vcsm vchostif)
SET_TARGET_PROPERTIES(${LIB_TARGET_NAME} PROPERTIES SOVERSION 0 VERSION 0.0.1)
IF(CMAKE_BUILD_TYPE STREQUAL "Release")
    ADD_CUSTOM_COMMAND(TARGET ${LIB_TARGET_NAME} POST_BUILD COMMAND ${CMAKE_STRIP} --strip-unneeded $<TARGET_FILE:${LIB_TARGET_NAME}>
        COMMENT "Stripping shared library")
ENDIF()

IF(LIB_TYPE STREQUAL "ShareLib")
    INSTALL(TARGETS ${LIB_TARGET_NAME}
            LIBRARY DESTINATION ${MODULES_OUTPUT_PATH}/lib
            ARCHIVE DESTINATION ${MODULES_OUTPUT_PATH}/lib)
ENDIF()

SET(SSM_HEADER_LIST
    ssm.h)

INSTALL(FILES ${SSM_HEADER_LIST}
    DESTINATION ${MODULES_OUTPUT_PATH}/include)

